# Cargo.toml
[package]
name = "Lunarium-Proxy"
version = "0.1.0"
edition = "2024"        # 指定 Rust 版本（语言特性集）

[dependencies]
tokio = { version = "1", features = ["full"] } # 异步运行时，"full" 开启所有功能
axum = { version = "0.8", features = [
  "json",
  "tracing",
  "tokio",
  "macros",
  "http2",
] } # Web 框架
serde = { version = "1", features = ["derive"] } # 序列化/反序列化
serde_json = "1" # Serde 的 JSON 支持
tracing = { version = "0.1", features = [
  "max_level_debug",
  "release_max_level_info",
] } # 日志框架
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "chrono",
] } # 日志输出配置
rand = "0.9"
chrono = "0.4"
futures = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
